[package]
name = "util"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
mock_time = []
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]
console_tracing = ["tokio/tracing", "console-subscriber"]
snappy = ["snap"]

[dependencies]
# std
chrono = { workspace = true }
parse_duration = "2.1"
rust_decimal = { workspace = true }
tempdir = { workspace = true }
byte-unit = { workspace = true }
hdrhistogram = { workspace = true }
mock_instant = { version = "0.2.1" }
maplit = { workspace = true }
anyhow = { workspace = true }
flate2 = "1.0"
snap = { workspace = true, optional = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# async
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync", "fs", "net", "io-util", "tokio-util", "signal", "time"] }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Tracing / Logging
pretty_env_logger = "0.4"
opentelemetry = { version = "^0.17", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.16"
tracing = { workspace = true }
tracing-flame = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter", "parking_lot"] }
console-subscriber = { git = "https://github.com/tokio-rs/console", optional = true, features = ["parking_lot"] }
#tracing-timing = "0.5"

[dev-dependencies]
async-stream = { workspace = true }
