[package]
name = "broker_core"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "broker"
harness = false

[features]
default = ["native-tls"]
zstd = ["awc/compress-zstd"]
rustls-tls = ["awc/rustls", "reqwest/rustls-tls"]
native-tls = ["awc/openssl", "reqwest/native-tls"]
mock_time = ["util/mock_time"]

[dev-dependencies]
env_logger = { workspace = true }
float-cmp = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }

[dependencies]
ext = { path = "../../ext" }
util = { path = "../../util" }
stats = { path = "../../stats"}

# Actix
actix = { workspace = true }
actix-codec = { workspace = true }
actix-http = { workspace = true }
actix_derive = { workspace = true }
awc = { workspace = true }

# Error
anyhow = { workspace = true }
thiserror = { workspace = true }

# Retry
backoff = { workspace = true }

# Plugin system
inventory = { workspace = true }

# std
bstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
bimap = { version = "0.6", features = ["serde"] }
multimap = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
libc = { workspace = true }
dyn-clone = "1.0"
ordered-float = { workspace = true }
regex = "1"
fancy-regex = "0.10"
string_cache = "0.8"
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
typed-builder = { workspace = true }
# rate limiting
governor = "0.5"

# Derive
derive_more = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Cryptography
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
data-encoding = { workspace = true }

# Async / Futures
async-trait = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }

# Http(s)
reqwest = { workspace = true, features = ["stream"] }

# Monitoring / Logging / Tracing
tracing = { workspace = true }
prometheus = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

