[package]
name = "inline-python-macros"
version = "0.7.0"
description = "Macros for the python crate"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
pyo3 = { version = "0.14.0", default-features = false, features = ["auto-initialize"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.71"
