[package]
name = "broker_binance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
private_tests = []
test_util = []

[dependencies]

broker_core = { path = "../../core" }

binance-rs-async = { version = "1.1.4", features = ["margin_api"] }

# actix
actix = "0.13"
actix-http = { version = "3.0.0-rc", features = ["ws"] }
awc = { version = "3.0.0-beta", features = ["compress-brotli", "compress-gzip", "cookies"], default-features = false }
# async
async-trait = "0.1"
futures = { version = "0.3", features = ["alloc"] }
tokio = { version = "1", features = ["full", "time"] }
tokio-stream = { version = "0.1" }
async-stream = { version = "0.3" }

# std
url = "2.2"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
bytes = "1.0"
bstr = "0.2"
backoff = { version = "0.4", features = ["tokio"] }
dashmap = { version = "5", features = ["serde"] }
# serde
serde = "1.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }

# Monitoring / Logging / Tracing
tracing = { version = "0.1", features = ["log"] }
