[package]
name = "broker_binance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
private_tests = []
test_util = []

[dependencies]

broker_core = { path = "../../core" }

binance-rs-async = { workspace = true, features = ["margin_api"] }

# actix
actix = { workspace = true }
actix-http = { workspace = true }
awc = { workspace = true }

# async
async-trait = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }

# std
url = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
bytes = { workspace = true }
bstr = { workspace = true }
backoff = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
# serde
serde = { workspace = true }
serde_json = { workspace = true }

# Monitoring / Logging / Tracing
tracing = { workspace = true }
