[package]
name = "broker_bitstamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
private_tests = []

[dependencies]

broker_core = { path = "../../core" }

# actix
actix = "0.13"
actix-http = { version = "3.0.0-rc", features = ["ws"] }
awc = { version = "3.0.0-beta", features = ["compress-brotli", "compress-gzip", "cookies"], default-features = false }

# async
async-trait = "0.1"
futures = "0.3"
tokio = "1.16"
tokio-stream = "0.1"

# serde
derivative = { version = "2.2" }
serde-aux = { version = "3.0" }
serde = "1.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }

# std
anyhow = "1.0"
bytes = "1.0"
url = "2.2"

# Monitoring / Logging / Tracing
tracing = { version = "0.1", features = ["log"] }

# http
reqwest = "0.11"

# encrypt
hmac = "0.12"
sha2 = "0.10"
data-encoding = "2.3"
libflate = { version = "1.0" }
