[package]
name = "broker_bitstamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
private_tests = []

[dependencies]

broker_core = { path = "../../core" }

# actix
actix = { workspace = true }
actix-http = { workspace = true }
awc = { workspace = true }

# async
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

# serde
derivative = { workspace = true }
serde-aux = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# std
anyhow = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }

# Monitoring / Logging / Tracing
tracing = { workspace = true }

# http
reqwest = { workspace = true }

# encrypt
hmac = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
libflate = { workspace = true }
