[package]
name = "broker_bittrex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
private_tests = []

[dependencies]

broker_core = { path = "../../core" }

async-trait = "0.1"
signalr_rs = { version = "0.2.5", default-features = false }
libflate = { version = "1.0" }
futures = "0.3"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
anyhow = "1.0"
reqwest = "0.11"
serde = "1.0"
tokio-stream = "0.1"
tokio = "1.16"

# encrypt
hmac = "0.12"
sha2 = "0.10"
data-encoding = "2.3"
base64 = "0.13"

# Monitoring / Logging / Tracing
tracing = { version = "0.1", features = ["log"] }
