[package]
name = "broker_bittrex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
private_tests = []

[dependencies]

broker_core = { path = "../../core" }

async-trait = { workspace = true }
signalr_rs = { version = "0.2.5", default-features = false }
libflate = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true }

# encrypt
hmac = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
base64 = "0.13"

# Monitoring / Logging / Tracing
tracing = { workspace = true }
