[package]
name = "broker_poloniex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
private_tests = []

[dependencies]

broker_core = { path = "../../core" }

async-trait = { workspace = true }

# Http(s)
reqwest = { workspace = true, features = ["stream"] }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }

# encrypt
hmac = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }

# Monitoring / Logging / Tracing
tracing = { workspace = true }
